turtleart.lessons.turtleart.Main.Kerr36.scala.error
Source:14: error: '(' expected but identifier found.
			if droite(45)
                           ^