turtleart.lessons.turtleart.Main.Kerr36.scala.code
override def run():Unit= {
	def morceau() {
		for (i<-1 to 2) {
			avance(20)
			if (i==1) {
				avance(20)
				droite(45)
			}
			else gauche(90)
			avance(20)
			gauche(90/i)
			avance(20)
			if droite(45)
			avance(20)
			droite(90)
			avance(20)
			gauche(45)
			avance(20)
			gauche(135)
			avance(20)
			droite(45)
			avance(20)
		}
	}
	morceau
}
